# peanut

./: .gitignore  LICENSE  Pipfile  README.md  generate_generic_model.py  generate_model.py  install_frontend.sh  integration_test.py  model_to_c.py  pyproject.toml  remove_slowest_nodes.py  setup.py
.github/workflows/: main.yml
peanut/: __init__.py  __main__.py  abstract_hpl.py  bit_flips.py  blas_calibration.py  empty.py  frequency_get.py  hpl.py  memory_calibration.py  mpi_calibration.py  mpi_ring.py  mpi_saturation.py  peanut.py  simdjson.py  smpi_hpl.py  stress_test.py  sw4lite.py
